tests/types-first-function-statics4/types-first-function-statics4.exp
Error --------------------------------------------------------------------------------------------------------- b.js:8:2

Cannot cast `foo.x` to string because number [1] is incompatible with string [2].

   b.js:8:2
   8| (foo.x: string);
       ^^^^^

References:
   a.js:4:9
   4| foo.x = 1;
              ^ [1]
   b.js:8:9
   8| (foo.x: string);
              ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------------- b.js:9:2

Cannot get `foo.other` because property `other` is missing in statics of function type [1].

   b.js:9:2
    9| (foo.other: number);
        ^^^^^^^^^

References:
   a.js:25:20
   25| module.exports = { foo, bar, FooComponent, BarComponent };
                          ^^^ [1]


Error -------------------------------------------------------------------------------------------------------- b.js:13:2

Cannot cast `bar.x` to string because number [1] is incompatible with string [2].

   b.js:13:2
   13| (bar.x: string);
        ^^^^^

References:
   a.js:7:9
    7| bar.x = 1;
               ^ [1]
   b.js:13:9
   13| (bar.x: string);
               ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- b.js:14:2

Cannot get `bar.other` because property `other` is missing in statics of function type [1].

   b.js:14:2
   14| (bar.other: number);
        ^^^^^^^^^

References:
   a.js:25:25
   25| module.exports = { foo, bar, FooComponent, BarComponent };
                               ^^^ [1]


Error -------------------------------------------------------------------------------------------------------- b.js:17:1

Cannot create `FooComponent` element because property `other` is missing in `Props` [1] but exists in props [2].

   b.js:17:1
   17| <FooComponent other={1}/>;
       ^^^^^^^^^^^^^^^^^^^^^^^^^ [2]

References:
   a.js:19:30
   19| function FooComponent(props: Props) { return <div />; }
                                    ^^^^^ [1]


Error -------------------------------------------------------------------------------------------------------- b.js:20:1

Cannot create `BarComponent` element because property `other` is missing in `Props` [1] but exists in props [2].

   b.js:20:1
   20| <BarComponent other={1}/>;
       ^^^^^^^^^^^^^^^^^^^^^^^^^ [2]

References:
   a.js:22:30
   22| const BarComponent = (props: Props) => <div />;
                                    ^^^^^ [1]


Error -------------------------------------------------------------------------------------------------------- b.js:32:2

Cannot cast `poly_foo.x` to string because number [1] is incompatible with string [2].

   b.js:32:2
   32| (poly_foo.x: string);
        ^^^^^^^^^^

References:
   poly_a.js:4:9
    4| foo.x = 1;
               ^ [1]
   b.js:32:14
   32| (poly_foo.x: string);
                    ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- b.js:33:2

Cannot get `poly_foo.other` because property `other` is missing in statics of function type [1].

   b.js:33:2
   33| (poly_foo.other: number);
        ^^^^^^^^^^^^^^

References:
   poly_a.js:3:1
    3| function foo<T>() {}
       ^^^^^^^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------------- b.js:38:2

Cannot cast `poly_bar.x` to string because number [1] is incompatible with string [2].

   b.js:38:2
   38| (poly_bar.x: string);
        ^^^^^^^^^^

References:
   poly_a.js:7:9
    7| bar.x = 1;
               ^ [1]
   b.js:38:14
   38| (poly_bar.x: string);
                    ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- b.js:39:2

Cannot get `poly_bar.other` because property `other` is missing in statics of function type [1].

   b.js:39:2
   39| (poly_bar.other: number);
        ^^^^^^^^^^^^^^

References:
   poly_a.js:6:1
    6| const bar = <T>() => {};
       ^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------------- b.js:42:1

Cannot create `PolyFooComponent` element because property `other` is missing in `Props` [1] but exists in props [2].

   b.js:42:1
   42| <PolyFooComponent t={0} other={1}/>;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]

References:
   poly_a.js:20:33
   20| function FooComponent<T>(props: Props<T>) { return <div />; }
                                       ^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------------- b.js:45:1

Cannot create `PolyBarComponent` element because property `other` is missing in `Props` [1] but exists in props [2].

   b.js:45:1
   45| <PolyBarComponent t={0} other={1}/>;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]

References:
   poly_a.js:23:33
   23| const BarComponent = <T>(props: Props<T>) => <div />;
                                       ^^^^^^^^ [1]



Found 12 errors
